--- a/src/main/webapp/WEB-INF/views/hw02_user_home.html
+++ b/src/main/webapp/WEB-INF/views/hw02_user_home.html
@@ -7,5 +7,6 @@
 <body>
 <h3>customer home</h3>
 <a th:href="@{/products/1}">all products</a>
+<a th:href="@{/history/1}">profile</a>
 </body>
 </html>
